@@ -30,6 +30,9 @@ Release CMTK-1.1.0:
 - Added: "warp" and "registration" tools now support writing of the
     reformatted floating image without requiring a separate tool, such as
     refortmatx. This makes integration into Slicer much more convenient.
+- Added: support Slicer3's XML-based progress reporting, and auto-detect
+    Slicer's presence to switch between standard console progress output and
+    XML-based output.
 
 
 Release CMTK-1.0.2 (2009-07-24):
